# RichyNeuron

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt
docs/: EMERGENCE_BRANCH.md  FULL_ABLATION_SPEC_v0_4_1.md  FULL_ABLATION_SPEC_v0_5_0.md  PRIOR_ART_FINDINGS.md  PRIOR_ART_SUMMARY.md  PROBLEM_v0_2_0.md  PROJECT_STATUS.md  RESEARCH_MAP_v0_2_0.md  SPEC_v0_2_0.md
results/: .gitkeep  DATA_README.md  PILOT2_ANALYSIS_RUBRIC.md  PILOT2_REPORT_v0_2_0.md  PILOT3_REPORT_v0_3_0.md  PILOT_REPORT_v0_2_0.md  full_ablation.csv  full_curves.jsonl  pilot2_selective_copy.csv  pilot2_summary.json  pilot3_curves.jsonl  pilot3_selective_copy.csv  pilot3_summary.json  pilot_selective_copy.csv  pilot_summary.json
rich_unit/: PREREG.md  PREREG_FULL.md  __init__.py  full_ablation_v0_4_1.py  pilot2_v0_2_0.py  pilot3_mini_v0_3_0.py  pilot_v0_2_0.py  report_full_v0_4_1.py  report_full_v0_5_0.py  report_v0_2_0.py  runner_v0_2_0.py  sweep_v0_2_0.py  train_v0_2_0.py
rich_unit/models/: __init__.py  ablation_unit_v0_4_1.py  baselines_v0_2_0.py  rich_sel_v0_3_0.py  rich_unit_v0_2_0.py  wrapper_v0_2_0.py
rich_unit/tasks/: __init__.py  assoc_recall_v0_2_0.py  counting_v0_5_0.py  majority_v0_5_0.py  selective_copy_v0_2_0.py
rich_unit/tests/: __init__.py  test_ablation_unit_v0_4_1.py  test_recurrence_v0_2_0.py  test_rich_sel_v0_3_0.py  test_shapes_v0_2_0.py  test_task_v0_2_0.py  test_train_v0_2_0.py
